[package]
name = "cardano-transaction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cardano-serialization-lib = "11.5.0"
dotenv = "0.15.0"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.108"
